--- a/spin.toml
+++ b/spin.toml
@@ -1,8 +1,8 @@
 name = "bjk-blog"
 spin_version = "1"
 version = "0.0.2"
-description = "The Spin documentation website running on... Spin."
-authors = [ "Fermyon Engineering <engineering@fermyon.com>" ]
+description = "Bartholomew Blog running on Spin"
+authors = [ "Brian Ketelsen <bketelsen@gmail.com>" ]
 trigger = { type = "http", base = "/" }
 
 [[component]]
