round robin with health

--- a/contrib/systemd/update-bart.service
+++ b/contrib/systemd/update-bart.service
@@ -3,8 +3,8 @@ Description=Update blog content
 
 [Service]
 Type=oneshot
-User=spin
-Group=spin
+User=root
+Group=root
 WorkingDirectory=/opt/spin/wasmblog
 ExecStart=/opt/spin/wasmblog/contrib/update.sh
 
