--- a/contrib/systemd/bartholomew.service
+++ b/contrib/systemd/bartholomew.service
@@ -8,7 +8,7 @@ Type=simple
 User=spin
 Group=spin
 WorkingDirectory=/opt/spin/wasmblog
-ExecStart=/usr/local/bin/spin up --file spin.toml --listen 127.0.0.1:3000
+ExecStart=/usr/local/bin/spin up --listen 127.0.0.1:3000 --file spin.toml
 Restart=always
 RestartSec=10
 
