--- a/contrib/caddy/Caddyfile
+++ b/contrib/caddy/Caddyfile
@@ -1,8 +1,9 @@
 spin.brian.dev {
 	reverse_proxy localhost:3000 localhost:3001 {
         lb_policy round_robin
-        fail_duration 2s
-        unhealthy_request_count 2
+        health_uri /health
+        health_interval 1s
+        health_timeout 500ms
 
     }
 }
