--- a/contrib/caddy/Caddyfile
+++ b/contrib/caddy/Caddyfile
@@ -2,7 +2,7 @@ spin.brian.dev {
 	reverse_proxy localhost:3000 localhost:3001 {
         lb_policy round_robin
         lb_try_duration 2s
-        health_uri /health
+        health_uri /healthz
         health_interval 1s
         health_timeout 500ms
 
